Fix field properties

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 
                   <form action="https://formspree.io/f/xblregdr" method="post">
                     <p>
-                      <input id="full-name" type="text" placeholder="Enter your name" class="txt-input" required>
-                      <input id="user-email" type="email" placeholder="Enter your email" class="txt-input" required>
+                      <input name="full-name" type="text" placeholder="Enter your name" class="txt-input" required>
+                      <input name="user-email" type="email" placeholder="Enter your email" class="txt-input" required>
                     </p>
 
                     <p>
-                      <input type="text" placeholder="Social media links" class="txt-input" required>
-                      <input type="text" placeholder="Phone number" class="txt-input" required>
+                      <input name="socials" type="text" placeholder="Social media links" class="txt-input">
+                      <input name="phone-number" type="text" placeholder="Phone number" class="txt-input">
                     </p>
                     <p>
-                      <textarea placeholder="Your pledge" required></textarea>
+                      <textarea name="pledge" placeholder="Your pledge" required></textarea>
                     </p>
                     <button class="button" type="submit">Pledge</button>
                   </form>
