Remove phone and socials

--- a/index.html
+++ b/index.html
@@ -75,13 +75,8 @@
                       <input name="full-name" type="text" placeholder="Enter your name" class="txt-input" required>
                       <input name="user-email" type="email" placeholder="Enter your email" class="txt-input" required>
                     </p>
-
                     <p>
-                      <input name="socials" type="text" placeholder="Social media links" class="txt-input">
-                      <input name="phone-number" type="text" placeholder="Phone number" class="txt-input">
-                    </p>
-                    <p>
-                      <textarea name="pledge" placeholder="Your pledge" required></textarea>
+                      <textarea name="pledge" placeholder="Enter your pledge" required></textarea>
                     </p>
                     <button class="button" type="submit">Pledge</button>
                   </form>
