Add analytics, pop how it works

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Give The Gift of Free Wifi</title>
+  <title>The Gift of Free WiFi</title>
   <meta name="description" content="Free, Fast and Unlimited Internet Access for Learning Centers">
   <meta name="keywords"
     content="free internet, free browsing, software, bootcamp, ux design, programming, school, data science, coding program">
   <link rel="canonical" href="https://givewifi.org/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="copyright" content="2024, GiveWifi">
+  <meta name="copyright" content="2024, GiveWiFi">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Give Wifi">
+  <meta name="twitter:title" content="The Gift of Free WiFi">
 
   <meta property="og:url" content="https://givewifi.org/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Give Wifi">
+  <meta property="og:title" content="The Gift of Free WiFi">
   <!-- favicon -->
   <link rel="shortcut icon" href="https://givewifi.org/favicon.png" type="image/vnd.microsoft.icon">
   <link rel="icon" href="https://givewifi.org/favicon.png" type="image/vnd.microsoft.icon">
@@ -37,7 +37,7 @@
 
       <div class="splash-page-left-top">
         <a href="#" class="logo">
-          <strong>GiveWifi</strong>
+          <strong>Give WiFi</strong>
         </a>
 
         <div class="links">
@@ -67,7 +67,8 @@
                     Give Techie Learners Free, Fast and Unlimited Internet
                   </h1>
                   <p>For just $20, you can ensure that a tech hub serving up to 70 learners has free, fast, and
-                    unlimited internet access for an entire month.
+                    unlimited internet access for an entire month. Learn more about <a class="how-link" href="">how it
+                      works</a>.
                   </p>
 
                   <form action="https://formspree.io/f/xblregdr" method="post">
@@ -88,7 +89,7 @@
           </div>
 
           <div class="copyright">
-            © 2024 GiveWifi <a href="#">How it works</a>
+            © 2024 GiveWiFi
           </div>
         </div>
       </div>
@@ -106,7 +107,7 @@
     </div>
 
     <div class="copyright mobile">
-      © 2024 GiveWifi <a href="#">How it works</a>
+      © 2024 GiveWiFi
     </div>
 
   </div>
@@ -121,16 +122,19 @@
       border-radius: 5px;
       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     }
+
+    a.how-link {
+      text-decoration: underline;
+    }
   </style>
 
-
-  <script async="" src="./js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WHKHQTC0GG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-TODO');
+    gtag('config', 'G-WHKHQTC0GG');
   </script>
 
 </body>
