--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
 
         <div class="links">
           <span id="contact-button" style="color: rgb(76, 136, 214)">Contact us</span>
-          <script>
-            document.getElementById('contact-button').addEventListener('click', function () {
-              const el = document.getElementById('contact-button');
-              el.innerHTML = 'support@givewifi.org';
-            });
-          </script>
         </div>
       </div>
 
@@ -57,7 +51,7 @@
 
           <div class="splash-page-vertical">
             <div class="splash-page-vertical-inner">
-              <div class="splash-page-left-inner-column">
+              <div id="main" class="splash-page-left-inner-column">
 
                 <div class="splash-page-heading">
                   <div class="badge puple">
@@ -67,7 +61,7 @@
                     Give Techie Learners Free, Fast and Unlimited Internet
                   </h1>
                   <p>For just $20, you can ensure that a tech hub serving up to 70 learners has free, fast, and
-                    unlimited internet access for an entire month. Learn more about <a class="how-link" href="">how it
+                    unlimited internet access for an entire month. Learn more about <a class="how-link" href="#how-it-works">how it
                       works</a>.
                   </p>
 
@@ -84,7 +78,27 @@
                 </div>
 
               </div>
+              <div id="how-it-works" class="splash-page-left-inner-column">
 
+                <div class="splash-page-heading">
+                  
+                  <h1>
+                    How It Works
+                  </h1>
+                  <p>
+                    In Nigeria's tech hubs, learners bring bring their internet (mobile hotspot), which on average would cost them N10K-N30K in a month. 
+                  </p>
+                  <p>
+                    Give WiFi is a non-profit that replaces the student's slow, data-capped and expensive mobile hotspot with a fast, free and unlimited-data satellite internet.
+                  </p>
+                  <p>
+                    A monthly subscription for satellite internet costs about N35K, which translates to $20. We work with tech hubs that have 50 or more learners to install and run a satellite internet service.
+                  </p>
+
+                  <a class="button" href="#" type="button">Go Back</a>
+                </div>
+
+              </div>
             </div>
           </div>
 
@@ -126,17 +140,61 @@
     a.how-link {
       text-decoration: underline;
     }
+
+    @keyframes fadeOut {
+      0% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0;
+        display: none;
+      }
+    }
+
+    .hidden {
+      /* animation: fadeOut 1s ease-in forwards;    */
+      display: none;
+    }
+
   </style>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WHKHQTC0GG"></script>
   <script>
+    // analytics.
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-WHKHQTC0GG');
-  </script>
 
+    // contact button.
+    document.getElementById('contact-button').addEventListener('click', function () {
+    const el = document.getElementById('contact-button');
+    el.innerHTML = 'support@givewifi.org';
+  });
+
+    // how it works toggle
+    function toggleVisibility() {
+      const hash = window.location.hash;
+      const main = document.getElementById('main');
+      const howContent = document.getElementById('how-it-works');
+
+      if (hash.endsWith('#how-it-works')) {
+        main.classList.add('hidden');
+        howContent.classList.remove('hidden');
+      } else {
+        main.classList.remove('hidden');
+        howContent.classList.add('hidden');
+      }
+    }
+
+    // Listen for hash change event
+    window.addEventListener('hashchange', toggleVisibility);
+
+    // Call the function on page load to handle direct access with the fragment
+    toggleVisibility();
+  </script>
 </body>
 
 </html>
