Add pledgers carousel

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     Give Techie Learners Free, Fast and Unlimited Internet
                   </h1>
                   <p>For just $20, you can ensure that a tech hub serving up to 70 learners has free, fast, and
-                    unlimited internet access for an entire month. Learn more about <a class="how-link" href="#how-it-works">how it
+                    unlimited internet access for an entire month. Learn more about <a class="how-link"
+                      href="#how-it-works">how it
                       works</a>.
                   </p>
 
@@ -81,18 +82,21 @@
               <div id="how-it-works" class="splash-page-left-inner-column">
 
                 <div class="splash-page-heading">
-                  
+
                   <h1>
                     How It Works
                   </h1>
                   <p>
-                    In Nigeria's tech hubs, learners bring bring their internet (mobile hotspot), which on average would cost them N10K-N30K in a month. 
+                    In Nigeria's tech hubs, learners bring bring their internet (mobile hotspot), which on average would
+                    cost them N10K-N30K in a month.
                   </p>
                   <p>
-                    Give WiFi is a non-profit that replaces the student's slow, data-capped and expensive mobile hotspot with a fast, free and unlimited-data satellite internet.
+                    Give WiFi is a non-profit that replaces the student's slow, data-capped and expensive mobile hotspot
+                    with a fast, free and unlimited-data satellite internet.
                   </p>
                   <p>
-                    A monthly subscription for satellite internet costs about N35K, which translates to $20. We work with tech hubs that have 50 or more learners to install and run a satellite internet service.
+                    A monthly subscription for satellite internet costs about N35K, which translates to $20. We work
+                    with tech hubs that have 50 or more learners to install and run a satellite internet service.
                   </p>
 
                   <a class="button" href="#" type="button">Go Back</a>
@@ -118,6 +122,146 @@
       <div class="splash-display-column-four"></div>
       <div class="splash-display-column-five"></div>
       <div class="splash-display-column-six"></div>
+      <div class="sponsors-wrapper">
+        <span class="i-pledged">I pledged 🎉 </span>
+        <section class="carousel">
+          <div class="carousel__wrapper">
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/shalomikhena/" class="carousel__link">
+                Shalom Ikhena
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/nahdir-austin/" class="carousel__link">
+                Nahdir Austin
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/chiomaokorie/" class="carousel__link">
+                Chioma Okorie
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/kissi/" class="carousel__link">
+                Kevin Kissi
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/jessicaemong/" class="carousel__link">
+                Jessica Mong
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/aishat-aloba/" class="carousel__link">
+                Aishat Aloba
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/tobi-oyebade-25972a1b9/" class="carousel__link">
+                Tobi Oyebade
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/joy-nwabeke-47a4a31b0/" class="carousel__link">
+                Joy Nwabeke
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/hajime-hayano/" class="carousel__link">
+                Hajime Hayano
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/alabi-ebunoluwa/" class="carousel__link">
+                Ebunoluwa Alabi
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/justiceogbonna/" class="carousel__link">
+                Justice Ogbonna
+              </a>
+            </div>
+
+            <!--#### repeat ####-->
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/shalomikhena/" class="carousel__link">
+                Shalom Ikhena
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/nahdir-austin/" class="carousel__link">
+                Nahdir Austin
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/chiomaokorie/" class="carousel__link">
+                Chioma Okorie
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/kissi/" class="carousel__link">
+                Kevin Kissi
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/jessicaemong/" class="carousel__link">
+                Jessica Mong
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/aishat-aloba/" class="carousel__link">
+                Aishat Aloba
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/tobi-oyebade-25972a1b9/" class="carousel__link">
+                Tobi Oyebade
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/joy-nwabeke-47a4a31b0/" class="carousel__link">
+                Joy Nwabeke
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/hajime-hayano/" class="carousel__link">
+                Hajime Hayano
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/alabi-ebunoluwa/" class="carousel__link">
+                Ebunoluwa Alabi
+              </a>
+            </div>
+
+            <div class="carousel__slide">
+              <a href="https://www.linkedin.com/in/justiceogbonna/" class="carousel__link">
+                Justice Ogbonna
+              </a>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
 
     <div class="copyright mobile">
@@ -157,6 +301,103 @@
       display: none;
     }
 
+    .sponsors-wrapper {
+      width: 100%;
+      padding: 30px;
+      height: 100px;
+      position: absolute;
+      bottom: 100px;
+    }
+
+    .i-pledged {
+      color: #333;
+      background: white;
+      padding: 5px 10px 0;
+      background: rgba(255, 255, 255, 0.9);
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      margin-left: 20px;
+
+    }
+
+    :root {
+      --no-of-slides: 11;
+      --slides-in-view: 4;
+      --slide-width: 200px;
+      --slide-height: 100px;
+      --iteration-time: 60s;
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(0);
+      }
+
+      100% {
+        transform: translateX(calc(var(--slide-width) * var(--no-of-slides)* -1));
+      }
+    }
+
+    .carousel__wrapper {
+      display: flex;
+      /*justify-content: center;*/
+      align-items: center;
+
+      width: calc(var(--slides-in-view) * var(--slide-width));
+      overflow: hidden;
+      margin: 0 auto;
+    }
+
+    .carousel {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 5px;
+      overflow: hidden;
+      width: calc(2 * var(--no-of-slides));
+    }
+
+    .carousel__slide {
+      animation: scroll var(--iteration-time) linear infinite;
+      display: flex;
+      flex-direction: column;
+
+      flex: 0 0 auto;
+      width: var(--slide-width);
+      /* height: var(--slide-height); */
+      box-sizing: border-box;
+      /*border: 1px dotted darkblue;*/
+    }
+
+    .carousel__link {
+      /* background: lightgoldenrodyellow; */
+      text-decoration: underline;
+
+      /* background-size: cover;
+      background-repeat: no-repeat; */
+
+      /* height: 50%; */
+      /*width: 100px;*/
+      margin: 15px 0px;
+    }
+
+
+    /* just for analysis remove this 3 rules later
+    .carousel__slide {
+      position: relative;
+    }
+
+    .carousel {
+      counter-reset: slideNo;
+    }
+
+    .carousel__slide::before {
+      counter-increment: slideNo;
+      content: counter(slideNo);
+      position: absolute;
+      top: 0%;
+      left: 50%;
+      font-size: 2rem;
+      color: lime;
+    }*/
   </style>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WHKHQTC0GG"></script>
@@ -170,9 +411,9 @@
 
     // contact button.
     document.getElementById('contact-button').addEventListener('click', function () {
-    const el = document.getElementById('contact-button');
-    el.innerHTML = 'support@givewifi.org';
-  });
+      const el = document.getElementById('contact-button');
+      el.innerHTML = 'support@givewifi.org';
+    });
 
     // how it works toggle
     function toggleVisibility() {
