Add link to receipt

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                   </h1>
                   <p>
                     In Nigeria's tech hubs, learners bring bring their internet (mobile hotspot), which on average would
-                    cost them N10K-N30K in a month.
+                    cost them ₦10K-₦30K in a month.
                   </p>
                   <p>
                     Give WiFi is a non-profit that replaces the student's slow, data-capped and expensive mobile hotspot
                     with a fast, free and unlimited-data satellite internet.
                   </p>
                   <p>
-                    A monthly subscription for satellite internet costs about N35K, which translates to $20. We work
+                    A monthly subscription for satellite internet <a href="https://drive.google.com/file/d/1czXm88lOsu3VL7iL80HY0GL1T4X-CmWT/view?usp=sharing">costs ₦35,000</a>, which translates to about $20. We work
                     with tech hubs that have 50 or more learners to install and run a satellite internet service.
                   </p>
 
